Fix pagination column holders to not display on firefox and other devices(line-height doesn't affect display:table-cell).

--- a/app.css
+++ b/app.css
@@ -205,7 +205,7 @@ header .enl-stat, header .res-stat {
 	line-height:20px;
 	vertical-align:middle;
 }
-.stat-row.for-sizing > * {
+.stat-row.for-sizing * {
 	line-height:0;
 	overflow:hidden;
 }
